--- a/reacttt/src/App.css
+++ b/reacttt/src/App.css
@@ -40,6 +40,24 @@ body{ padding:1em; font-family:arial; }
     text-align: center;
 }
 
+
+.flex-itm1 {
+  background: rgb(92, 197, 92);
+  font-size: 1rem;
+  color: #eee;
+  margin-left: 5px;
+  margin-top: 2px;
+  margin-bottom: 3px;
+  padding: 1px;
+  /* min-width: 45px; */
+  /* min-height: 50px; */
+  text-align: center;
+}
+
+.win{
+  background: rgb(230, 10, 39);
+}
+
 :disabled {
   /* background: rgb(230, 10, 39); */
 } 
