--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -2,34 +2,17 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>WELCOME!</title>
+    <title>TikTacToe</title>
+    <!--<link href="/static/main.cd6b554b.chunk.css" rel="stylesheet" type="text/css"/>-->
+    <link rel="stylesheet" href="/static/main.bd595faf.chunk.css">
 </head>
 <body>
-<h1>WELCOME!</h1>
-<h2>moves</h2>
-<table>
-    <thead>
-    <tr>
-        <th>id</th>
-        <th>round</th>
-        <th>turn</th>
-        <th>user</th>
-        <th>cell</th>
-        <th>row</th>
-        <th>col</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="move : ${moves}">
-        <td th:text="${move.id}"/>
-        <td th:text="${move.round}"/>
-        <td th:text="${move.turn}"/>
-        <td th:text="${move.user}"/>
-        <td th:text="${move.cell}"/>
-        <td th:text="${move.row}"/>
-        <td th:text="${move.col}"/>
-    </tr>
-    </tbody>
-</table>
+    <div id="root"></div>
+    <script src="/static/runtime~main.229c360f.js"></script>
+    <script src="/static/main.04ece53b.chunk.js"></script>
+    <script src="/static/1.ad456044.chunk.js"></script>
+    <!--<script src="/static/runtime~main.d413acfd.js" type="text/javascript"></script>-->
+    <!--<script src="/static/main.fb47abdf.chunk.js" type="text/javascript"></script>-->
+    <!--<script src="/static/1.5b265051.chunk.js" type="text/javascript"></script>-->
 </body>
 </html>
