--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"/>
     <title>TikTacToe</title>
-    <!--<link href="/static/main.cd6b554b.chunk.css" rel="stylesheet" type="text/css"/>-->
-    <link rel="stylesheet" href="/static/main.bd595faf.chunk.css">
+    <link rel="stylesheet" href="/static/main.bd595faf.chunk.css"/>
 </head>
 <body>
+    <h1 th:text="${dimension}"/>
     <div id="root"></div>
     <script src="/static/runtime~main.229c360f.js"></script>
     <script src="/static/main.04ece53b.chunk.js"></script>
     <script src="/static/1.ad456044.chunk.js"></script>
-    <!--<script src="/static/runtime~main.d413acfd.js" type="text/javascript"></script>-->
-    <!--<script src="/static/main.fb47abdf.chunk.js" type="text/javascript"></script>-->
-    <!--<script src="/static/1.5b265051.chunk.js" type="text/javascript"></script>-->
 </body>
 </html>
