--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -8,6 +8,7 @@
 <body>
     <!--<h1 th:text="${dimension}"/>-->
     <div id="root"></div>
+    <script src="/static/js/main.000296e0.chunk.js"></script>
     <script src="/static/js/runtime~main.229c360f.js"></script>
     <script src="/static/js/1.ad456044.chunk.js"></script>
     <script src="/static/js/main.9879176c.chunk.js"></script>
