--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -8,7 +8,8 @@
 <body>
     <!--<h1 th:text="${dimension}"/>-->
     <div id="root"></div>
-    <script src="/static/js/main.e94ff857.chunk.js"></script>
+    <script src="/static/js/main.09ca05ed.chunk.js"></script>
+    <!--<script src="/static/js/main.e94ff857.chunk.js"></script>-->
     <script src="/static/js/1.fea9c8b3.chunk.js"></script>
     <script src="/static/js/runtime~main.229c360f.js"></script>
 </body>
